--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <br>
     <b>Negative Space</b> doesn't require any extra permissions when installing the game so I can't collect any personal data.
     <br>
-    <b>Negative Space</b>e contains no in-app purchases, no advertisements and no external links.
+    <b>Negative Space</b> contains no in-app purchases, no advertisements and no external links.
     <br>
     <b>Negative Space</b> is fully functional offline.
     <br>
