--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 </head>
 <body>
 <p>
-    <b>Negative Space</b> game is COPPA-compliant.
+    <b>Negative Space Puzzle</b> game is COPPA-compliant.
     <br>
-    <b>Negative Space</b> doesn't collect any personal information and doesn't share it with third parties.
+    <b>Negative Space Puzzle</b> doesn't collect any personal information and doesn't share it with third parties.
     <br>
-    <b>Negative Space</b> doesn't require any extra permissions when installing the game so I can't collect any personal data.
+    <b>Negative Space Puzzle</b> doesn't require any extra permissions when installing the game so I can't collect any personal data.
     <br>
-    <b>Negative Space</b> contains no in-app purchases, no advertisements and no external links.
+    <b>Negative Space Puzzle</b> contains no in-app purchases, no advertisements and no external links.
     <br>
-    <b>Negative Space</b> is fully functional offline.
+    <b>Negative Space Puzzle</b> is fully functional offline.
     <br>
     If you have any questions about your privacy feel free to contact me at <b>msf.apps.business@gmail.com</b>
     <br>
